--- a/about.html
+++ b/about.html
@@ -197,12 +197,12 @@
         <!-- HISTORY start -->
         <div class="container">
             <div class="row">
-                <div class="text-center col-lg-12 py-1 m-2">
+                <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h5>Our History</h5>
                     <h3>Our Most Efficient Year</h3>
                 </div>
-                <div class="col-lg-6 py-3">
-                    <h3 class="m-5">RAJA ROY PRAMOTORS,2021</h3>
+                <div class="col-lg-6 py-3 wow fadeInUp" data-wow-delay="0.1s"">
+                    <h3 class="m-5 wow ">RAJA ROY PRAMOTORS,2021</h3>
                     <p class="m-5">Founded 2021, RAJA ROY PRAMOTORS was born out of a passion for real estate and a
                         desire to create a
                         positive impact on people's lives. Our journey began with a small team of dedicated
@@ -214,7 +214,7 @@
                         professionalism, and personalized service have remained at the forefront of everything we do.
                     </p>
                 </div>
-                <div class="col-lg-4"><img src="./img/coustomer review man.png" style="height:500px;" class="m-3" />
+                <div class="col-lg-4"><img src="./img/coustomer review man.png" style="height:500px;" class="m-5 wow fadeInUp" data-wow-delay="0.1s" />
                 </div>
             </div>
         </div>
@@ -222,24 +222,23 @@
         <!-- Vision Start-->
         <div class="container">
             <div class="row">
-                <div class="text-center col-lg-12 py-1 m-2">
+                <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h3>Vision</h3>
                 </div>
-                <div class="col-lg-6 py-3  mb-1">
-                    <p>To be the beacon of visionary real estate development, reshaping skylines and enriching lives. We
-                        aspire to create enduring landmarks that inspire awe, foster vibrant communities, and set new
-                        standards for sustainable, inclusive, and exceptional living.</p>
+                <div class="col-lg-6 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
+                    <p class="m-5">At Vision Real Estate, our mission is to redefine the standard of excellence in the real estate industry by delivering innovative, sustainable, and community-centric solutions. With a forward-thinking vision, we aim to create spaces that inspire, enrich, and transform lives. Our approach is rooted in integrity, collaboration, and a deep understanding of market dynamics, allowing us to anticipate trends and capitalize on emerging opportunities. From residential developments that prioritize comfort, convenience, and connectivity to commercial projects that drive economic growth and vitality, we are dedicated to exceeding the expectations of our clients and stakeholders at every turn.</p>
+                    <p class="m-5">Central to our vision is a commitment to sustainability and environmental stewardship. We recognize the profound impact that real estate development has on the environment and are dedicated to minimizing our ecological footprint through innovative design, green building practices, and energy-efficient technologies. By prioritizing sustainability, we not only create healthier, more resilient communities but also contribute to the preservation of our planet for future generations. With a passion for innovation, a dedication to excellence, and a focus on sustainability, Vision Real Estate is leading the way towards a brighter, more sustainable future for all.</p>
                 </div>
-                <div class="col-lg-6"><img src="/" style="/" /></div>
+                <div class="col-lg-6"><img src="./img/vision pics.png" style="height:500px;" class="m-5 wow fadeInUp" data-wow-delay="0.1s"/></div>
             </div>
         </div>
         <!-- mission start -->
         <div class="container">
             <div class="row">
-                <div class="text-center col-lg-12 py-1 m-2">
+                <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h3>Mission</h3>
                 </div>
-                <div class="col-lg-12 py-3  mb-1">
+                <div class="col-lg-12 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
                     <p>At Raja Roy Promoters, our mission is to create exceptional living and working environments that
                         elevate lifestyles and inspire communities. We are dedicated to crafting sustainable, innovative
                         spaces that exceed our clients’ expectations, all while upholding the highest standards of
@@ -252,10 +251,10 @@
         <!-- OUR ETHICS & VALUES -->
         <div class="container">
             <div class="row">
-                <div class="text-center col-lg-12 py-1 m-2">
+                <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h3>OUR ETHICS & VALUES</h3>
                 </div>
-                <div class="col-lg-6 py-3  mb-1">
+                <div class="col-lg-6 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
                     <p>Integrity: We operate with unwavering integrity, ensuring that every decision and action is
                         guided by honesty, transparency, and ethical conduct.
                         Customer-Centric: Our clients are at the core of our business. We prioritize their needs,
