--- a/about.html
+++ b/about.html
@@ -238,13 +238,11 @@
                 <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h3>Mission</h3>
                 </div>
-                <div class="col-lg-12 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
-                    <p>At Raja Roy Promoters, our mission is to create exceptional living and working environments that
-                        elevate lifestyles and inspire communities. We are dedicated to crafting sustainable, innovative
-                        spaces that exceed our clients’ expectations, all while upholding the highest standards of
-                        integrity and excellence.</p>
+                <div class="col-lg-6 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
+                    <p class="m-5">At Raja Roy Promoters,our mission is to go beyond simply buying and selling properties. We strive to be a trusted partner and advisor to our clients, guiding them through every step of their real estate journey with integrity, transparency, and professionalism. Our commitment is to understand the unique needs and goals of each client and to tailor our services to exceed their expectations. Whether it's helping a first-time homebuyer find their dream home, assisting a growing family in upsizing to accommodate their changing needs, or advising investors on lucrative opportunities in the market, we are dedicated to delivering personalized solutions that align with our clients' objectives.</p>
+                    <p class="m-5">In addition to serving our clients with excellence, we are deeply committed to making a positive impact on the communities we serve. We believe that real estate is not just about properties; it's about people and the places they call home. That's why we actively engage in community initiatives, support local businesses, and participate in charitable endeavors that enhance the quality of life for all residents. By fostering strong community connections and giving back to the neighborhoods we operate in, we aim to create vibrant, thriving communities where everyone can prosper. At our real estate firm, our mission is not just about transactions; it's about building lasting relationships and making a meaningful difference in the lives of our clients and communities.</p>
                 </div>
-
+                <div class="col-lg-6"><img src="./img/Mission.jpg" style="height:500px;" class="m-5 wow fadeInUp" data-wow-delay="0.1s"/></div>
             </div>
         </div>
         <!-- mission end -->
