--- a/contact.html
+++ b/contact.html
@@ -130,14 +130,14 @@
                         <img class="img-fluid w-100" src="./img/image01.jpg" alt="">
                     </div>
                     <div class="col-lg-6 pb-2 pb-lg-0 " style="margin-bottom: 25px;">
-                        <img class="img-fluid w-100" src="./img/coustomer_review_man2.png" alt="">
+                        <img class="img-fluid w-100" src="./img/coustomer_review_man3.png" alt="">
                     </div>
                     <p class="mb-1"></p>
                 </div>
                 <div class="row g-5">
                     <div class="col-lg-7 col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.2s">
-                            <form>
+                            <form action="https://formcarry.com/s/UUlXYOX175l">
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
