--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                             <div class="text-center border-bottom p-4">
                                 <img src="./img/open-plots.webp" alt="">
                             </div>
-                            <div class="text-center border-bottom p-4 pt-5">
-                                <h4 class="fw-bold">OPEN PLOTS</h4>
+                            <div class=" border-bottom p-4 pt-5">
+                                <h4 class="fw-bold text-center">OPEN PLOTS</h4>
                                 <p class="mb-0">At Raja Roy Promoters, open plots are the canvas of our vision. These
                                     pristine
                                     parcels
@@ -295,8 +295,8 @@
                             <div class="text-center border-bottom p-4">
                                 <img src="./img/form-lands.webp" alt="">
                             </div>
-                            <div class="text-center border-bottom p-4 pt-5">
-                                <h4 class="fw-bold">FARM - LANDS</h4>
+                            <div class=" border-bottom p-4 pt-5">
+                                <h4 class="fw-bold text-center">FARM - LANDS</h4>
                                 <p class="mb-0"> Our expertise extends to nurturing and enhancing the productivity of
                                     farming lands.
                                     We
@@ -313,8 +313,8 @@
                             <div class="text-center border-bottom p-4">
                                 <img src="./img/investment.webp" alt="">
                             </div>
-                            <div class="text-center border-bottom p-4 pt-5">
-                                <h4 class="fw-bold">INVESTMENTS</h4>
+                            <div class="border-bottom p-4 pt-5">
+                                <h4 class="fw-bold text-center ">INVESTMENTS</h4>
                                 <p class="mb-0"> Our proven track record in real estate ensures that your investment is
                                     in capable
                                     hands.
@@ -388,35 +388,7 @@
 
                                 </div>
 
-                                <!-- <div class="col-sm-4 v">
 
-                                    <video width="300" height="300" controls>
-                                        <source src="./assets/images/video1.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
-                                </div>
-                                <div class="col-sm-4 v">
-
-                                    <video width="300" height="300" controls>
-                                        <source src="./assets/images/video2.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
-
-                                </div>
-                                <div class="col-sm-4 v">
-                                    <video width="300" height="300" controls>
-                                        <source src="./assets/images/video3.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
-                                </div>
-
-                                <div class="col-sm-4 v">
-                                    <video width="300" height="300" controls>
-                                        <source src="./assets/images/video6.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
-
-                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -616,88 +588,7 @@
         </div>
     </div>
 
-    <!-- Team Start -->
-    <!-- <div class="container-xxl py-5">
-            <div class="container px-lg-5">
-                <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
-                    data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Our Team Members</h1>
-                    <p class="mb-1">Vero justo sed sed vero clita amet. Et justo vero sea diam elitr amet ipsum eos
-                        ipsum clita duo sed. Sed vero sea diam erat vero elitr sit clita.</p>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
-                            <div class="text-center p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/team-1.jpg" alt="">
-                                <h5 class="fw-bold mb-1">Full Name</h5>
-                                <small>Designation</small>
-                            </div>
-                            <div class="d-flex justify-content-center bg-primary p-3">
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
-                            <div class="text-center p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/team-2.jpg" alt="">
-                                <h5 class="fw-bold mb-1">Full Name</h5>
-                                <small>Designation</small>
-                            </div>
-                            <div class="d-flex justify-content-center bg-primary p-3">
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
-                            <div class="text-center p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/team-3.jpg" alt="">
-                                <h5 class="fw-bold mb-1">Full Name</h5>
-                                <small>Designation</small>
-                            </div>
-                            <div class="d-flex justify-content-center bg-primary p-3">
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
-                            <div class="text-center p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/team-4.jpg" alt="">
-                                <h5 class="fw-bold mb-1">Full Name</h5>
-                                <small>Designation</small>
-                            </div>
-                            <div class="d-flex justify-content-center bg-primary p-3">
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square text-primary bg-white m-1" href=""><i
-                                        class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-    <!-- Team End -->
+
 
     <style>
 
