--- a/gallery.html
+++ b/gallery.html
@@ -150,6 +150,12 @@
                 <div class="col-lg-4 col-md-6 p-2">
                     <img src="./img/Form-Lands.jpg" alt="">
                 </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/Form-Lands.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/Form-Lands.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
