--- a/investments.html
+++ b/investments.html
@@ -157,26 +157,18 @@
             <div class="container ">
                 <div class="row ">
                     <div class="col-lg-12 text-center">
-                        <h4>Our Latest Photos</h4>
+                        <h4>Investments</h4>
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/INVESTMENT-PLOTS.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/openplot3.jpg" alt="">
+                        <img src="./img/invw.webp" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/open-plots.webp" alt="">
+                        <img src="./img/inestment.jpg" alt="">
                     </div>
-                    <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/openplotimage.jpg" alt="">
-                    </div>
-                    <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/open3.png" alt="">
-                    </div>
-                    <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/openplot5.jpg" alt="">
-                    </div>
+                    <
                     </div>
                     </div>
                     </div>
