--- a/gallery.html
+++ b/gallery.html
@@ -136,25 +136,22 @@
                     <img src="./img/IMG_7874-PhotoRoom.png-PhotoRoom.png" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/gallery6.png" alt="">
+                    <img src="./img/gallery-1 anil.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/gallery5.jpeg" alt="">
+                    <img src="./img/gallary- anil-2.webp" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/investment.jpg" alt="">
+                    <img src="./img/Gallery Anil9.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Form-Lands.jpg" alt="">
+                    <img src="./img/Gallery-anil4.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Form-Lands.jpg" alt="">
+                    <img src="./img/Gallery Anil9.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Form-Lands.jpg" alt="">
-                </div>
-                <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Form-Lands.jpg" alt="">
+                    <img src="./img/Gallerey-7 anil.jpg" alt="">
                 </div>
             </div>
         </div>
