--- a/index.html
+++ b/index.html
@@ -256,7 +256,31 @@
                 <i class="fa fa-phone-alt"></i>
             </a>
         </div>
+        <!--videos-->
+        <div class="container-fluid">
+            <div class="container py-md-5 py-4">
+                <h3 class="title-style text-center mb-5"></h3>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="bg-clr-white hover-box">
+                            <div class="row align-items-center justify-content-center">
+                                <div class="col-sm-12 col-lg-8 v">
+                                    <video width="100%" controls>
+                                        <source src="./img/raja-roy-video.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
 
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!--videos-->
 
         <!-- Pricing Start -->
         <div class="container-xxl py-5 services">
@@ -372,31 +396,7 @@
 
 
 
-        <!--videos-->
-        <div class="container-fluid">
-            <div class="container py-md-5 py-4">
-                <h3 class="title-style text-center mb-5">Videos</h3>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="bg-clr-white hover-box">
-                            <div class="row align-items-center justify-content-center">
-                                <div class="col-sm-12 col-lg-6 v">
-                                    <video width="100%" controls>
-                                        <source src="./img/raja-roy-video.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
 
-                                </div>
-
-
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <!--videos-->
 
         <div class="container-xxl py-5 business">
             <div class="container px-lg-5">
