--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 
                     </div>
                     <div class="hero-header2 container" style="">
+                        <!-- <video autoplay>
+                            <source src="./img/Cut Clip.mp4" type="video/mp4">
+                            <source src="movie.ogg" type="video/ogg">
+                            Your browser does not support the video tag.
+                        </video> -->
 
                         <div class="row g-5">
                             <div class="col-lg-6 content  text-center text-lg-start">
@@ -166,10 +171,10 @@
                                     class="btn btn-secondary py-sm-3 px-sm-5 me-3 animated slideInLeft">Contact
                                     Us</a>
                             </div>
-                            <div class="col-lg-6 text-center text-lg-start  hero-img">
+                            <!-- <div class="col-lg-6 text-center text-lg-start  hero-img">
                                 <img class="img-fluid animated zoomIn hero-image" src="./img/coustomer_review_man2.png"
                                     alt="">
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
