--- a/index.html
+++ b/index.html
@@ -44,10 +44,50 @@
         </div>
         <!-- Spinner End -->
 
-        <style>
 
-        </style>
-        <!-- Navbar & Hero Start -->
+        <div class="mangos container-xxl">
+            <div class="mangooos">
+                <div class="mango mango1">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango2">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango3">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango4">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango5">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango6">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango7">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango8">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango9">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango10">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango11">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango12">
+                    <img src="./img/natural.png" alt="">
+                </div>
+                <div class="mango mango13">
+                    <img src="./img/natural.png" alt="">
+                </div>
+            </div>
+        </div>
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
@@ -68,10 +108,6 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
-
-
-
-
                                 <a href="./open-plots.html" class="dropdown-item ">Open Plots</a>
                                 <a href="./farm-lands.html" class="dropdown-item">Farm-Lands</a>
                                 <a href="./investments.html" class="dropdown-item">Investment</a>
@@ -98,67 +134,17 @@
                                 <p class="text-white animated slideInLeft">WE ARE GIVING THE BEST TO MAKE YOUR
                                     DREAMS
                                 </p>
-
                                 <a href="" class="btn btn-secondary py-sm-3 px-sm-5 me-3 animated slideInLeft">Contact
                                     Us</a>
                             </div>
-                            <div class="col-lg-6 text-center  text-lg-start mangos ">
+                            <div class="col-lg-6 text-center  text-lg-start ">
                                 <img class="img-fluid animated zoomIn hero-image"
                                     src="./img/image01-removebg-preview.png" alt="">
-
-                                <div class="mangooos">
-                                    <div class="mango mango1">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango2">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango3">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango4">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango5">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango6">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango7">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango8">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango9">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango10">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango11">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango12">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                    <div class="mango mango13">
-                                        <img src="./img/natural.png" alt="">
-                                    </div>
-                                </div>
-
                             </div>
                         </div>
 
                     </div>
                     <div class="hero-header2 container" style="">
-                        <!-- <video autoplay>
-                            <source src="./img/Cut Clip.mp4" type="video/mp4">
-                            <source src="movie.ogg" type="video/ogg">
-                            Your browser does not support the video tag.
-                        </video> -->
-
                         <div class="row g-5">
                             <div class="col-lg-6 content  text-center text-lg-start">
                                 <h1 class="display-4 text-white mb-4 animated slideInLeft">Welcome to the
@@ -171,10 +157,10 @@
                                     class="btn btn-secondary py-sm-3 px-sm-5 me-3 animated slideInLeft">Contact
                                     Us</a>
                             </div>
-                            <!-- <div class="col-lg-6 text-center text-lg-start  hero-img">
+                            <div class="col-lg-6 text-center text-lg-start  hero-img">
                                 <img class="img-fluid animated zoomIn hero-image" src="./img/coustomer_review_man2.png"
                                     alt="">
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
